trunk/Archive2/f6/7cce4c8b48f10a/output
main.cpp:5:6: error: redefinition of 'template<class C> decltype (c.begin()) std::begin(C&)'
 auto begin( C& c ) -> decltype(c.begin())
      ^
In file included from /usr/include/c++/4.8/string:51:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/range_access.h:48:5: error: 'template<class _Container> decltype (__cont.begin()) std::begin(_Container&)' previously declared here
     begin(_Container& __cont) -> decltype(__cont.begin())
     ^
main.cpp:12:6: error: redefinition of 'template<class C> decltype (c.end()) std::end(C&)'
 auto end( C& c ) -> decltype(c.end())
      ^
In file included from /usr/include/c++/4.8/string:51:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/range_access.h:68:5: error: 'template<class _Container> decltype (__cont.end()) std::end(_Container&)' previously declared here
     end(_Container& __cont) -> decltype(__cont.end())
     ^
